--- a/src/styles/helper.scss
+++ b/src/styles/helper.scss
@@ -1,50 +1,33 @@
+@use "bulma/sass/elements/button" as *;
+@use "bulma/sass/utilities/initial-variables" as *;
+@use "bulma/sass/helpers" as *;
+
 .circle-icon {
+  @extend .is-outlined;
+  @extend .is-rounded;
+
   padding-left: 0 !important;
   padding-right: 0 !important;
 
-  width: 3rem;
-  height: 3rem;
+  width: $size-1;
+  height: $size-1;
   border-width: 1.8px;
 
   &.is-small {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: $size-2;
+    height: $size-2;
     border-width: 1px;
   }
   &.is-medium {
-    width: 3.6rem;
-    height: 3.6rem;
+    width: $size-1 * 1.2;
+    height: $size-1 * 1.2;
     border-width: 2px;
   }
   &.is-large {
-    width: 4.2rem;
-    height: 4.2rem;
+    width: $size-1 * 1.4;
+    height: $size-1 * 1.4;
     border-width: 2.4px;
   }
-}
-
-.button.circle-icon {
-  --bulma-button-border-width: max(1px, 0.0625em);
-  --bulma-loading-color: var(
-    --vv-loading-color,
-    hsl(var(--bulma-button-h), var(--bulma-button-s), var(--bulma-button-l))
-  );
-  background-color: transparent;
-  border-color: hsl(var(--bulma-button-h), var(--bulma-button-s), var(--bulma-button-l));
-  color: hsl(var(--bulma-button-h), var(--bulma-button-s), var(--bulma-button-l));
-
-  border-radius: var(--bulma-radius-rounded);
-}
-
-.button.circle-icon:hover {
-  --bulma-button-border-width: max(2px, 0.125em);
-  --bulma-button-outer-shadow-alpha: 1;
-}
-
-.button.circle-icon[disabled],
-fieldset[disabled] .button.circle-icon {
-  background-color: transparent;
-  box-shadow: none;
 }
 
 /** idタグにジャンプるするときにヘッダーサイズ分ずれるのを防ぐ */
