--- a/src/pages/song/index.astro
+++ b/src/pages/song/index.astro
@@ -200,7 +200,7 @@ const backgroundImageUrl = `url(${(await getImage({ src: backgroundImage })).src
           font-size: 7.5rem;
           text-shadow: 0 0 10px
             rgb(
-              from color-mix(in srgb, var(--bulma-link-text) 95%, black) R G B /
+              from color-mix(in srgb, var(--vv-link-text) 95%, black) R G B /
                 0.55
             );
         }
