--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -15,6 +15,7 @@ import {
   stripHtmlTags,
 } from "@/helper";
 import "@/styles/global.css";
+import "@/styles/bulma-legacy.css";
 import type { ImageMetadata } from "astro";
 import { SEO } from "astro-seo";
 import { getImage } from "astro:assets";
@@ -158,7 +159,6 @@ const googleAnalyticsSrc = `https://www.googletagmanager.com/gtag/js?id=${GA_TRA
 
 <style lang="scss" is:global>
   @use "@/styles/global.scss";
-  @use "@/styles/bulma.scss";
 
   // ページの高さを最低でも画面の高さに合わせる
   html {
