--- a/src/pages/product/_TopContainer.astro
+++ b/src/pages/product/_TopContainer.astro
@@ -53,14 +53,14 @@ const postCharacterKey =
 <div class="top container">
   <a
     href={withBaseUrl(getProductPageUrl(characterInfos[prevCharacterKey]))}
-    class="button prev circle-icon is-black"
+    class="prev circle-icon is-black"
     aria-label="前のキャラクターを表示"
   >
     <FontAwesomeIcon icon={faCircleLeft} />
   </a>
   <a
     href={withBaseUrl(getProductPageUrl(characterInfos[postCharacterKey]))}
-    class="button post circle-icon is-black"
+    class="post circle-icon is-black"
     aria-label="次のキャラクターを表示"
   >
     <FontAwesomeIcon icon={faCircleRight} />
