--- a/src/pages/nemo/_SpeakerComponent.astro
+++ b/src/pages/nemo/_SpeakerComponent.astro
@@ -57,7 +57,7 @@ const { info, style } = Astro.props;
                   ({ link, label, icon }) =>
                     link && (
                       <a
-                        class="circle-icon ml-auto is-medium text-white mb-0"
+                        class="circle-icon ml-auto circle-icon--md text-white mb-0"
                         href={link}
                         aria-label={`${info.cv}の${label}`}
                         target="_blank"
